Using wkpdf instead

--- a/template/header.html
+++ b/template/header.html
@@ -13,6 +13,12 @@ body{
   outline: 1300px solid #FAFAFA;
 }
 
+body.pdf {
+    width: auto;
+    background: #000;
+    margin: auto;
+}
+
 a{ color: #0645ad; text-decoration:none;}
 a:visited{ color: #0b0080; }
 a:hover{ color: #06e; }
@@ -124,4 +130,4 @@ body{font-size:16px;}
   p, h2, h3 { orphans: 3; widows: 3; }
   h2, h3 { page-break-after: avoid; }
 }
-</style></head><body>
+</style></head><body class="normal">
